--- a/cyberimmunity--autonomous-car-m2.ipynb
+++ b/cyberimmunity--autonomous-car-m2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,10 +95,36 @@
     "            parameters=direction\n",
     "        ) # замените на код создания сообщения с направлением для приводов\n",
     "                               # подсказка, требуемая операция - set_direction\n",
-    "\n",
     "        servos_q.put(event_speed)\n",
     "        servos_q.put(event_direction)  \n",
     "\n",
+    "\n",
+    "    def _lock_cargo(self):\n",
+    "        \"\"\" заблокировать грузовой отсек \"\"\"\n",
+    "        cargo_q = self._queues_dir.get_queue(CARGO_BAY_QUEUE_NAME)\n",
+    "        # инициализация сообщения с командой на блокировку грузового отсека\n",
+    "        # подсказка: блок CargoBay ожидает команду \"lock_cargo\" без параметров\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CARGO_BAY_QUEUE_NAME,\n",
+    "            operation=\"lock_cargo\",\n",
+    "            parameters=None\n",
+    "        )\n",
+    "        cargo_q.put(event)\n",
+    "\n",
+    "    def _release_cargo(self):\n",
+    "        \"\"\" открыть грузовой отсек \"\"\"\n",
+    "        cargo_q = self._queues_dir.get_queue(CARGO_BAY_QUEUE_NAME)\n",
+    "        # инициализация сообщения с командой на блокировку грузового отсека\n",
+    "        # подсказка: блок CargoBay ожидает команду \"release_cargo\" без параметров\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CARGO_BAY_QUEUE_NAME,\n",
+    "            operation=\"release_cargo\",\n",
+    "            parameters=None\n",
+    "        )\n",
+    "\n",
+    "        cargo_q.put(event)\n",
     "class NavigationSystem(BaseNavigationSystem):\n",
     "    \"\"\" класс навигационного блока \"\"\"\n",
     "    def _send_position_to_consumers(self):        \n",
@@ -123,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
