--- a/cyberimmunity--autonomous-car-m3.ipynb
+++ b/cyberimmunity--autonomous-car-m3.ipynb
@@ -154,8 +154,33 @@
     "                               # подсказка, требуемая операция - set_direction\n",
     "\n",
     "        servos_q.put(event_speed)\n",
-    "        servos_q.put(event_direction)  \n",
+    "        servos_q.put(event_direction) \n",
     "\n",
+    "    def _lock_cargo(self):\n",
+    "        \"\"\" заблокировать грузовой отсек \"\"\"\n",
+    "        cargo_q = self._queues_dir.get_queue(CARGO_BAY_QUEUE_NAME)\n",
+    "        # инициализация сообщения с командой на блокировку грузового отсека\n",
+    "        # подсказка: блок CargoBay ожидает команду \"lock_cargo\" без параметров\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CARGO_BAY_QUEUE_NAME,\n",
+    "            operation=\"lock_cargo\",\n",
+    "            parameters=None\n",
+    "        )\n",
+    "        cargo_q.put(event)\n",
+    "\n",
+    "    def _release_cargo(self):\n",
+    "        \"\"\" открыть грузовой отсек \"\"\"\n",
+    "        cargo_q = self._queues_dir.get_queue(CARGO_BAY_QUEUE_NAME)\n",
+    "        # инициализация сообщения с командой на блокировку грузового отсека\n",
+    "        # подсказка: блок CargoBay ожидает команду \"release_cargo\" без параметров\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CARGO_BAY_QUEUE_NAME,\n",
+    "            operation=\"release_cargo\",\n",
+    "            parameters=None\n",
+    "        ) \n",
+    "        cargo_q.put(event)\n",
     "class NavigationSystem(BaseNavigationSystem):\n",
     "    \"\"\" класс навигационного блока \"\"\"\n",
     "    def _send_position_to_consumers(self):        \n",
@@ -180,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,17 +562,49 @@
     "        servos_q: Queue = self._queues_dir.get_queue(servos_q_name)\n",
     "\n",
     "        # отправка сообщения с желаемой скоростью\n",
-    "        event_speed = Event(source=self.event_source_name,\n",
+    "        event_direction = Event(source=self.event_source_name,\n",
     "                            destination=servos_q_name,\n",
     "                            operation=\"set_direction\",\n",
     "                            parameters=self._direction\n",
     "                            )\n",
-    "        servos_q.put(event_speed)"
+    "        servos_q.put(event_direction)\n",
+    "\n",
+    "    def _lock_cargo(self, _):\n",
+    "        self._log_message(LOG_INFO, \"Блокируем отсек\")\n",
+    "        self._send_lock_cargo_to_consumers()\n",
+    "\n",
+    "    def _release_cargo(self, _):\n",
+    "        if not self._route.route_finished:\n",
+    "            self._log_message(LOG_INFO, \"Да рано ещё...\")\n",
+    "            return\n",
+    "        self._send_release_cargo_to_consumers()\n",
+    "        \n",
+    "    def _send_lock_cargo_to_consumers(self):\n",
+    "        self._log_message(LOG_DEBUG, \"Блокируем отсек\")\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CARGO_BAY_QUEUE_NAME,\n",
+    "            operation=\"lock_cargo\",\n",
+    "            parameters=None\n",
+    "        )\n",
+    "        cargo_bay = self._queues_dir.get_queue(CARGO_BAY_QUEUE_NAME)\n",
+    "        cargo_bay.put(event)\n",
+    "\n",
+    "    def _send_release_cargo_to_consumers(self):\n",
+    "        self._log_message(LOG_DEBUG, \"Разблокируем отсек\")\n",
+    "        event = Event(\n",
+    "            source=self.event_source_name,\n",
+    "            destination=CARGO_BAY_QUEUE_NAME,\n",
+    "            operation=\"release_cargo\",\n",
+    "            parameters=None\n",
+    "        )\n",
+    "        cargo_bay = self._queues_dir.get_queue(CARGO_BAY_QUEUE_NAME)\n",
+    "        cargo_bay.put(event)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -662,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -876,6 +933,30 @@
     "\n",
     "        safety_q.put(event_speed)\n",
     "        safety_q.put(event_direction)  \n",
+    "\n",
+    "    def _release_cargo(self):\n",
+    "        safety_q_name = SAFETY_BLOCK_QUEUE_NAME\n",
+    "        event_release_cargo = Event(\n",
+    "            source=BaseControlSystem.event_source_name,\n",
+    "            destination=safety_q_name,\n",
+    "            operation=\"release_cargo\",\n",
+    "            parameters=None\n",
+    "        )\n",
+    "        safety_q: Queue = self._queues_dir.get_queue(safety_q_name)\n",
+    "        safety_q.put(event_release_cargo)\n",
+    "\n",
+    "\n",
+    "    def _lock_cargo(self):\n",
+    "        safety_q_name = SAFETY_BLOCK_QUEUE_NAME\n",
+    "        event_lock_cargo = Event(\n",
+    "            source=BaseControlSystem.event_source_name,\n",
+    "            destination=safety_q_name,\n",
+    "            operation=\"lock_cargo\",\n",
+    "            parameters=None\n",
+    "        )\n",
+    "        safety_q: Queue = self._queues_dir.get_queue(safety_q_name)\n",
+    "        safety_q.put(event_lock_cargo)\n",
+    "\n",
     "class NavigationSystem(BaseNavigationSystem):\n",
     "    \"\"\" класс навигационного блока \"\"\"\n",
     "    def _send_position_to_consumers(self):        \n",
@@ -920,7 +1001,7 @@
     "        \"\"\" установка нового направления перемещения \"\"\"\n",
     "        self._log_message(LOG_INFO, f\"текущие координаты: {self._position}\")\n",
     "        self._log_message(LOG_DEBUG, f\"маршрутное задание: {self._mission}\")\n",
-    "        self._log_message(LOG_DEBUG, f\"состояние маршруте: {self._route}\")\n",
+    "        self._log_message(LOG_DEBUG, f\"состояние маршрута: {self._route}\")\n",
     "        # TODO реализовать контроль безопасности изменения направления\n",
     "        ot = self._position\n",
     "        do = self._route.next_point()\n",
@@ -965,12 +1046,12 @@
     "        servos_q: Queue = self._queues_dir.get_queue(servos_q_name)\n",
     "\n",
     "        # отправка сообщения с желаемой скоростью\n",
-    "        event_speed = Event(source=self.event_source_name,\n",
+    "        event_direction = Event(source=self.event_source_name,\n",
     "                            destination=servos_q_name,\n",
     "                            operation=\"set_direction\",\n",
     "                            parameters=self._direction\n",
     "                            )\n",
-    "        servos_q.put(event_speed)\n",
+    "        servos_q.put(event_direction)\n",
     "\n",
     "    def _lock_cargo(self, _):\n",
     "        self._log_message(LOG_INFO, \"Блокируем отсек\")\n",
