--- a/cyberimmunity--autonomous-car-m3.ipynb
+++ b/cyberimmunity--autonomous-car-m3.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
     "# в случае превышения времени выполнения ячейки на более чем 10 секунд от заданного, \n",
     "# допустимо перезапустить вычислительное ядро и повторно выполнить весь блокнот, штрафные очки за это не начисляются\n",
     "# при условии, что повторный запуск закончился успешно\n",
-    "sleep(30)\n",
+    "sleep(135)\n",
     "\n",
     "# останавливаем все компоненты\n",
     "system_components.stop()\n",
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -796,10 +796,12 @@
     "        safety_block\n",
     "    ])\n",
     "\n",
+    "control_system.enable_surprises()\n",
+    "\n",
     "system_components.start()\n",
     "\n",
     "# настройте этот параметр так, чтобы проверить работу ограничителя\n",
-    "sleep(80)\n",
+    "sleep(135)\n",
     "\n",
     "# останавливаем все компоненты\n",
     "system_components.stop()\n",
