--- a/cyberimmunity--autonomous-car-m3.ipynb
+++ b/cyberimmunity--autonomous-car-m3.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
     "                           # подсказка, требуемая операция - set_speed\n",
     "\n",
     "        # отправка сообщения с желаемым направлением\n",
-    "        event_direction = event_speed = Event(\n",
+    "        event_direction = Event(\n",
     "            source=self.event_source_name,\n",
     "            destination=safety_q_name,\n",
     "            operation=\"set_direction\",\n",
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
     "                           # подсказка, требуемая операция - set_speed\n",
     "\n",
     "        # отправка сообщения с желаемым направлением\n",
-    "        event_direction = event_speed = Event(\n",
+    "        event_direction = Event(\n",
     "            source=self.event_source_name,\n",
     "            destination=safety_q_name,\n",
     "            operation=\"set_direction\",\n",
