--- a/cyberimmunity--autonomous-car-m4.ipynb
+++ b/cyberimmunity--autonomous-car-m4.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
     "                           # подсказка, требуемая операция - set_speed\n",
     "\n",
     "        # отправка сообщения с желаемым направлением\n",
-    "        event_direction = event_speed = Event(\n",
+    "        event_direction = Event(\n",
     "            source=self.event_source_name,\n",
     "            destination=safety_q_name,\n",
     "            operation=\"set_direction\",\n",
@@ -141,6 +141,30 @@
     "\n",
     "        safety_q.put(event_speed)\n",
     "        safety_q.put(event_direction)  \n",
+    "\n",
+    "    def _release_cargo(self):\n",
+    "        safety_q_name = SAFETY_BLOCK_QUEUE_NAME\n",
+    "        event_release_cargo = Event(\n",
+    "            source=BaseControlSystem.event_source_name,\n",
+    "            destination=safety_q_name,\n",
+    "            operation=\"release_cargo\",\n",
+    "            parameters=None\n",
+    "        )\n",
+    "        safety_q: Queue = self._queues_dir.get_queue(safety_q_name)\n",
+    "        safety_q.put(event_release_cargo)\n",
+    "\n",
+    "\n",
+    "    def _lock_cargo(self):\n",
+    "        safety_q_name = SAFETY_BLOCK_QUEUE_NAME\n",
+    "        event_lock_cargo = Event(\n",
+    "            source=BaseControlSystem.event_source_name,\n",
+    "            destination=safety_q_name,\n",
+    "            operation=\"lock_cargo\",\n",
+    "            parameters=None\n",
+    "        )\n",
+    "        safety_q: Queue = self._queues_dir.get_queue(safety_q_name)\n",
+    "        safety_q.put(event_lock_cargo)\n",
+    "\n",
     "class NavigationSystem(BaseNavigationSystem):\n",
     "    \"\"\" класс навигационного блока \"\"\"\n",
     "    def _send_position_to_consumers(self):        \n",
@@ -164,6 +188,10 @@
     "        safety_q: Queue = self._queues_dir.get_queue(safety_q_name)\n",
     "        safety_q.put(s_event)\n",
     "\n",
+    "control_system = ControlSystem(queues_dir=queues_dir, log_level=LOG_ERROR)\n",
+    "navigation_system = NavigationSystem(queues_dir=queues_dir, log_level=LOG_ERROR)\n",
+    "communication_gateway = CommunicationGateway(queues_dir=queues_dir, log_level=LOG_ERROR)\n",
+    "\n",
     "# 1. скопируйте сюда код заготовки из предыдущей ячейки и напишите свою реализацию класса SafetyBlock\n",
     "from src.safety_block import BaseSafetyBlock\n",
     "from src.config import LOG_DEBUG, LOG_INFO, SERVOS_QUEUE_NAME, CARGO_BAY_QUEUE_NAME\n",
@@ -181,7 +209,7 @@
     "        \"\"\" установка нового направления перемещения \"\"\"\n",
     "        self._log_message(LOG_INFO, f\"текущие координаты: {self._position}\")\n",
     "        self._log_message(LOG_DEBUG, f\"маршрутное задание: {self._mission}\")\n",
-    "        self._log_message(LOG_DEBUG, f\"состояние маршруте: {self._route}\")\n",
+    "        self._log_message(LOG_DEBUG, f\"состояние маршрута: {self._route}\")\n",
     "        # TODO реализовать контроль безопасности изменения направления\n",
     "        ot = self._position\n",
     "        do = self._route.next_point()\n",
@@ -226,12 +254,12 @@
     "        servos_q: Queue = self._queues_dir.get_queue(servos_q_name)\n",
     "\n",
     "        # отправка сообщения с желаемой скоростью\n",
-    "        event_speed = Event(source=self.event_source_name,\n",
+    "        event_direction = Event(source=self.event_source_name,\n",
     "                            destination=servos_q_name,\n",
     "                            operation=\"set_direction\",\n",
     "                            parameters=self._direction\n",
     "                            )\n",
-    "        servos_q.put(event_speed)\n",
+    "        servos_q.put(event_direction)\n",
     "\n",
     "    def _lock_cargo(self, _):\n",
     "        self._log_message(LOG_INFO, \"Блокируем отсек\")\n",
@@ -409,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -435,8 +463,9 @@
     }
    ],
    "source": [
-    "# используем то же маршрутное задание, которое было в модуле 2\n",
     "from time import sleep\n",
+    "from geopy import Point as GeoPoint\n",
+    "\n",
     "\n",
     "from src.queues_dir import QueuesDirectory\n",
     "from src.servos import Servos\n",
@@ -449,20 +478,20 @@
     "from src.sitl_mqtt import TelemetrySender\n",
     "from src.system_wrapper import SystemComponentsContainer\n",
     "from src.wpl_parser import WPLParser\n",
-    "from src.mission_type import GeoSpecificSpeedLimit\n",
     "\n",
     "\n",
     "# возьмём маршрут из модуля 2\n",
-    "wpl_file = \"primer.wpl\"\n",
+    "wpl_file = \"module4.wpl\"\n",
     "\n",
     "parser = WPLParser(wpl_file)    \n",
     "points = parser.parse()\n",
+    "print(points)\n",
     "\n",
-    "# обновите скоростные ограничения для вашего маршрута!\n",
+    "from src.mission_type import GeoSpecificSpeedLimit\n",
     "speed_limits = [\n",
-    "    GeoSpecificSpeedLimit(0, 20),\n",
-    "    GeoSpecificSpeedLimit(1, 60),\n",
-    "    GeoSpecificSpeedLimit(5, 20),\n",
+    "    GeoSpecificSpeedLimit(0, 60),\n",
+    "    GeoSpecificSpeedLimit(19, 100), \n",
+    "    GeoSpecificSpeedLimit(26, 60)\n",
     "]\n",
     "\n",
     "\n",
@@ -472,15 +501,12 @@
     "# каталог очередей для передачи сообщений между блоками\n",
     "queues_dir = QueuesDirectory() \n",
     "\n",
-    "\n",
-    "# создание блоков передачи данных в СУПА\n",
     "if afcs_present:\n",
     "    mission_sender = MissionSender(\n",
     "        queues_dir=queues_dir, client_id=car_id, log_level=LOG_ERROR)\n",
     "    telemetry_sender = TelemetrySender(\n",
     "        queues_dir=queues_dir, client_id=car_id, log_level=LOG_ERROR)\n",
     "\n",
-    "# создание основных функциональных блоков\n",
     "mission_planner = MissionPlanner(\n",
     "    queues_dir, afcs_present=afcs_present, mission=mission)\n",
     "\n",
@@ -497,11 +523,9 @@
     "\n",
     "servos = Servos(queues_dir=queues_dir, log_level=LOG_ERROR)\n",
     "cargo_bay = CargoBay(queues_dir=queues_dir, log_level=LOG_INFO)\n",
-    "\n",
     "safety_block = SafetyBlock(queues_dir=queues_dir, log_level=LOG_INFO)\n",
     "\n",
-    "\n",
-    "# сборка всех запускаемых блоков в одном \"кузове\"\n",
+    "# по аналогии собираем все блоки в одном кузове\n",
     "system_components = SystemComponentsContainer(\n",
     "    components=[\n",
     "        mission_sender,\n",
@@ -530,20 +554,22 @@
     "control_system.enable_surprises()\n",
     "#################################\n",
     "\n",
-    "# запуск всех блоков\n",
     "system_components.start()\n",
     "\n",
     "# ограничение поездки по времени\n",
+    "# параметр sleep - время в секундах,\n",
+    "# настройте этот параметр так, чтобы ваша машинка завершила маршрут\n",
     "# в случае превышения времени выполнения ячейки на более чем 10 секунд от заданного, \n",
     "# допустимо перезапустить вычислительное ядро и повторно выполнить весь блокнот, штрафные очки за это не начисляются\n",
     "# при условии, что повторный запуск закончился успешно\n",
-    "sleep(80)\n",
+    "sleep(135)\n",
     "\n",
     "# останавливаем все компоненты\n",
     "system_components.stop()\n",
     "\n",
     "# удалим все созданные компоненты\n",
-    "system_components.clean()"
+    "system_components.clean()\n",
+    "del system_components"
    ]
   },
   {
