--- a/cyberimmunity--autonomous-car-m4.ipynb
+++ b/cyberimmunity--autonomous-car-m4.ipynb
@@ -74,7 +74,7 @@
     "from geopy import Point as GeoPoint\n",
     "from multiprocessing import Queue\n",
     "from src.communication_gateway import BaseCommunicationGateway\n",
-    "from src.config import CONTROL_SYSTEM_QUEUE_NAME, SERVOS_QUEUE_NAME, SAFETY_BLOCK_QUEUE_NAME, COMMUNICATION_GATEWAY_QUEUE_NAME, NAVIGATION_QUEUE_NAME\n",
+    "from src.config import CONTROL_SYSTEM_QUEUE_NAME, SERVOS_QUEUE_NAME, SAFETY_BLOCK_QUEUE_NAME, COMMUNICATION_GATEWAY_QUEUE_NAME, NAVIGATION_QUEUE_NAME, SECURITY_MONITOR_QUEUE_NAME\n",
     "from src.event_types import Event\n",
     "from src.config import LOG_DEBUG, LOG_ERROR, LOG_INFO\n",
     "from src.control_system import BaseControlSystem\n",
@@ -107,13 +107,16 @@
     "                      destination=safety_q_name,\n",
     "                      operation=\"set_mission\", parameters=self._mission\n",
     "                      )\n",
-    "\n",
     "        # поиск в каталоге нужной очереди (в данном случае - системы управления)\n",
     "        control_q: Queue = self._queues_dir.get_queue(control_q_name)\n",
     "        # отправка события в найденную очередь\n",
     "        control_q.put(event)\n",
     "        safety_q: Queue = self._queues_dir.get_queue(safety_q_name)\n",
     "        safety_q.put(s_event)\n",
+    "        security_q: Queue = self._queues_dir.get_queue(SECURITY_MONITOR_QUEUE_NAME)\n",
+    "        security_q.put(event)\n",
+    "        security_q: Queue = self._queues_dir.get_queue(SECURITY_MONITOR_QUEUE_NAME)\n",
+    "        security_q.put(s_event)\n",
     "class ControlSystem(BaseControlSystem):\n",
     "    \"\"\"ControlSystem блок расчёта управления \"\"\"\n",
     "\n",
@@ -141,6 +144,10 @@
     "\n",
     "        safety_q.put(event_speed)\n",
     "        safety_q.put(event_direction)  \n",
+    "        security_q = self._queues_dir.get_queue(SECURITY_MONITOR_QUEUE_NAME)\n",
+    "        security_q.put(event_speed)\n",
+    "        security_q = self._queues_dir.get_queue(SECURITY_MONITOR_QUEUE_NAME)\n",
+    "        security_q.put(event_direction)\n",
     "\n",
     "    def _release_cargo(self):\n",
     "        safety_q_name = SAFETY_BLOCK_QUEUE_NAME\n",
@@ -152,6 +159,8 @@
     "        )\n",
     "        safety_q: Queue = self._queues_dir.get_queue(safety_q_name)\n",
     "        safety_q.put(event_release_cargo)\n",
+    "        security_q = self._queues_dir.get_queue(SECURITY_MONITOR_QUEUE_NAME)\n",
+    "        security_q.put(event_release_cargo)\n",
     "\n",
     "\n",
     "    def _lock_cargo(self):\n",
@@ -164,6 +173,8 @@
     "        )\n",
     "        safety_q: Queue = self._queues_dir.get_queue(safety_q_name)\n",
     "        safety_q.put(event_lock_cargo)\n",
+    "        security_q = self._queues_dir.get_queue(SECURITY_MONITOR_QUEUE_NAME)\n",
+    "        security_q.put(event_lock_cargo)\n",
     "\n",
     "class NavigationSystem(BaseNavigationSystem):\n",
     "    \"\"\" класс навигационного блока \"\"\"\n",
@@ -187,6 +198,10 @@
     "        control_q.put(event)   \n",
     "        safety_q: Queue = self._queues_dir.get_queue(safety_q_name)\n",
     "        safety_q.put(s_event)\n",
+    "        security_q = self._queues_dir.get_queue(SECURITY_MONITOR_QUEUE_NAME)\n",
+    "        security_q.put(event)\n",
+    "        security_q = self._queues_dir.get_queue(SECURITY_MONITOR_QUEUE_NAME)\n",
+    "        security_q.put(s_event)\n",
     "\n",
     "# 1. скопируйте сюда код заготовки из предыдущей ячейки и напишите свою реализацию класса SafetyBlock\n",
     "from src.safety_block import BaseSafetyBlock\n",
