--- a/cyberimmunity--autonomous-car-m4.ipynb
+++ b/cyberimmunity--autonomous-car-m4.ipynb
@@ -535,7 +535,7 @@
     "servos = Servos(queues_dir=queues_dir, log_level=LOG_ERROR)\n",
     "cargo_bay = CargoBay(queues_dir=queues_dir, log_level=LOG_INFO)\n",
     "safety_block = SafetyBlock(queues_dir=queues_dir, log_level=LOG_INFO)\n",
-    "\n",
+    "security_monitor = SecurityMonitor(queues_dir=queues_dir)\n",
     "# по аналогии собираем все блоки в одном кузове\n",
     "system_components = SystemComponentsContainer(\n",
     "    components=[\n",
